[project]
name = "epstein-search"
version = "0.1.0"
description = "Semantic search over the Epstein Files using zvec + sentence-transformers"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10,<3.13"
keywords = ["epstein", "search", "vector-search", "zvec", "rag"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
    "zvec>=0.2",
    "sentence-transformers>=3.0",
    "litellm>=1.0",
    "click>=8.0",
    "rich>=13.0",
    "huggingface-hub>=0.20",
    "tqdm>=4.0",
    "chromadb>=0.5",
]

[project.urls]
Homepage = "https://github.com/simulationship/epstein-search"
Repository = "https://github.com/simulationship/epstein-search"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "python-dotenv>=1.0",
]
ingest = [
    "datasets>=3.0",
]

[project.scripts]
epstein-search = "epstein_files.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/epstein_files"]
